2008-05-05 Jim Garlick <garlick@llnl.gov>

	* repquota.c : Add HAS_GETOPT_LONG.  Add root check.

2008-05-02 Jim Garlick <garlick@llnl.gov>

	* repquota.c : Add -u option to report only usage information.

2008-05-02 Jim Garlick <garlick@llnl.gov>

	* : tag 1.9

2008-05-01 Jim Garlick <garlick@llnl.gov>

	* getquota.c : Implement fs-neutral getquota() interface.

	* repquota.c : Quota reporting program.

	* list.[ch]: New from lsd-tools.

2008-05-01 Jim Garlick <garlick@llnl.gov>

	* quota.c : Add initial support for Lustre quotas.
	Rewrite crufty reporting functions.
	Add repquota functionality.

	* getquota.h : New generic quota structure so results from
	getquota_nfs() and getquota_lustre() can look identical.

	* getquota_nfs.c : Factor out nfs-specific quota code.

	* getquota_lustre.c : New lustre-specific quota code.

	* util.c : Factor out common code.

	* getconf.c : Add getconfdesc() and getconfdescsub().
	Allow hash-comments in quota.conf file.

	* rquota.x : Rename from quota.x to avoid confusion.

2008-04-18 Jim Garlick <garlick@llnl.gov>

	* quota.c : Fix bug with quota -lv, documented in
	https://chaos.llnl.gov/bugzilla/show_bug.cgi?id=301

	* : tag 1.8

2007-10-29 Jim Garlick <garlick@llnl.gov>

	* quota.spec : Change Conflicts: to Obsoletes: [Trent D'Hooge]

	* : tag 1.7

2007-10-22 Jim Garlick <garlick@llnl.gov>

	* META : Change package name to rquota to distinguish this package
	from the Red Hat quota package.

	* quota.spec : Conflicts: quota.

	* : tag 1.6

2006-10-06 Jim Garlick <garlick@llnl.gov>

	* quota.c : Change boolean_t to int (conflict on AIX 5.2).

	* quota.c : Add -t (timeout) option.

	* quota.spec : Comment out BuildRequires: /usr/bin/rpcgen for AIX.

	* quota.spec : Use _mandir and _bindir macros.

	* : tag 1.5

	* NEWS : New.

2006-10-05 Jim Garlick <garlick@llnl.gov>

	* : Migration from CVS to subversion.

	* Make-rpm.mk : Removed (artifact of old build system).

	* quota.c : Added -l (login) option.
